@@ -5,7 +5,7 @@ import it.units.erallab.hmsrobots.core.controllers.DistributedSensing;
 import it.units.erallab.hmsrobots.core.controllers.RealFunction;
 import it.units.erallab.hmsrobots.core.controllers.TimedRealFunction;
 import it.units.erallab.hmsrobots.core.objects.Robot;
-import it.units.erallab.hmsrobots.core.objects.SensingVoxel;
+import it.units.erallab.hmsrobots.core.objects.Voxel;
 import it.units.erallab.hmsrobots.util.Grid;
 import it.units.erallab.hmsrobots.util.SerializationUtils;
 
@@ -17,7 +17,7 @@ import java.util.stream.Collectors;
 /**
  * @author eric
  */
-public class FixedHomoDistributed implements PrototypedFunctionBuilder<TimedRealFunction, Robot<? extends SensingVoxel>> {
+public class FixedHomoDistributed implements PrototypedFunctionBuilder<TimedRealFunction, Robot> {
   private final int signals;
 
   public FixedHomoDistributed(int signals) {
@@ -25,9 +25,9 @@ public class FixedHomoDistributed implements PrototypedFunctionBuilder<TimedReal
   }
 
   @Override
-  public Function<TimedRealFunction, Robot<? extends SensingVoxel>> buildFor(Robot<? extends SensingVoxel> robot) {
+  public Function<TimedRealFunction, Robot> buildFor(Robot robot) {
     int[] dim = getIODim(robot);
-    Grid<? extends SensingVoxel> body = robot.getVoxels();
+    Grid<Voxel> body = robot.getVoxels();
     int nOfInputs = dim[0];
     int nOfOutputs = dim[1];
     return function -> {
@@ -46,12 +46,12 @@ public class FixedHomoDistributed implements PrototypedFunctionBuilder<TimedReal
         ));
       }
       DistributedSensing controller = new DistributedSensing(body, signals);
-      for (Grid.Entry<? extends SensingVoxel> entry : body) {
-        if (entry.getValue() != null) {
-          controller.getFunctions().set(entry.getX(), entry.getY(), SerializationUtils.clone(function));
+      for (Grid.Entry<Voxel> entry : body) {
+        if (entry.value() != null) {
+          controller.getFunctions().set(entry.key().x(), entry.key().y(), SerializationUtils.clone(function));
         }
       }
-      return new Robot<>(
+      return new Robot(
           controller,
           SerializationUtils.clone(body)
       );
@@ -59,33 +59,32 @@ public class FixedHomoDistributed implements PrototypedFunctionBuilder<TimedReal
   }
 
   @Override
-  public TimedRealFunction exampleFor(Robot<? extends SensingVoxel> robot) {
+  public TimedRealFunction exampleFor(Robot robot) {
     int[] dim = getIODim(robot);
     return RealFunction.build(d -> d, dim[0], dim[1]);
   }
 
-  private int[] getIODim(Robot<? extends SensingVoxel> robot) {
-    Grid<? extends SensingVoxel> body = robot.getVoxels();
-    SensingVoxel voxel = body.values().stream().filter(Objects::nonNull).findFirst().orElse(null);
+  private int[] getIODim(Robot robot) {
+    Grid<Voxel> body = robot.getVoxels();
+    Voxel voxel = body.values().stream().filter(Objects::nonNull).findFirst().orElse(null);
     if (voxel == null) {
       throw new IllegalArgumentException("Target robot has no voxels");
     }
     int nOfInputs = DistributedSensing.nOfInputs(voxel, signals);
     int nOfOutputs = DistributedSensing.nOfOutputs(voxel, signals);
-    List<Grid.Entry<? extends SensingVoxel>> wrongVoxels = body.stream()
-        .filter(e -> e.getValue() != null)
-        .filter(e -> DistributedSensing.nOfInputs(e.getValue(), signals) != nOfInputs)
-        .collect(Collectors.toList());
+    List<Grid.Entry<Voxel>> wrongVoxels = body.stream()
+        .filter(e -> e.value() != null)
+        .filter(e -> DistributedSensing.nOfInputs(e.value(), signals) != nOfInputs).toList();
     if (!wrongVoxels.isEmpty()) {
       throw new IllegalArgumentException(String.format(
           "Cannot build %s robot mapper for this body: all voxels should have %d inputs, but voxels at positions %s have %s",
           getClass().getSimpleName(),
           nOfInputs,
           wrongVoxels.stream()
-              .map(e -> String.format("(%d,%d)", e.getX(), e.getY()))
+              .map(e -> String.format("(%d,%d)", e.key().x(), e.key().y()))
               .collect(Collectors.joining(",")),
           wrongVoxels.stream()
-              .map(e -> String.format("%d", DistributedSensing.nOfInputs(e.getValue(), signals)))
+              .map(e -> String.format("%d", DistributedSensing.nOfInputs(e.value(), signals)))
               .collect(Collectors.joining(","))
       ));
     }
